k8s/walkershare/volumes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: walkershare
