k8s/walkershare/syncthing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: walkershare
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/version: 1.29.7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend
        app.kubernetes.io/name: syncthing
    spec:
      containers:
      - image: syncthing/syncthing:1.29.7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8384
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: syncthing
        ports:
        - containerPort: 8384
          protocol: TCP
        - containerPort: 22000
          protocol: TCP
        - containerPort: 21027
          protocol: UDP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 8384
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/syncthing
          name: walkershare-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: walkershare-pvc
        persistentVolumeClaim:
          claimName: walkershare-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: walkershare
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: syncthing
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: web
    port: 8384
    protocol: TCP
    targetPort: 8384
  - name: sync
    port: 22000
    protocol: TCP
    targetPort: 22000
  - name: discovery
    port: 21027
    protocol: UDP
    targetPort: 21027
  selector:
    app.kubernetes.io/name: syncthing
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  namespace: walkershare
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: syncthing.wayl.one
    http:
      paths:
      - backend:
          service:
            name: syncthing
            port:
              number: 8384
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - syncthing.wayl.one
    secretName: syncthing-wayl-one-tls
